--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -42,8 +42,8 @@
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-                    
-                {{ amenity.name }}
+		      <input type="checkbox" data-id={{ amenity.id }} data-name={{ amenity.name }}>
+		      {{ amenity.name }}
               </li>
 	      {% endfor %}
 	    </ul>
