--- a/web_dynamic/templates/100-hbnb.html
+++ b/web_dynamic/templates/100-hbnb.html
@@ -26,14 +26,13 @@
 	    <ul>
 	      {% for state in states %}
 	      <li>
-                <input type="checkbox" data-id={{ state.id }}
-                 data-name={{ state.name }}>
-		<h2>{{ state[0].name }}:</h2>
+		<h2>
+                <input type="checkbox" data-id={{ state[0].id }} data-name={{ state[0].name }}>
+		{{ state[0].name }}:</h2>
 		<ul>
 		  {% for city in state[1] %}
 		  <li>
-                    <input type="checkbox" data-id={{ state.id }}
-                     data-name={{ state.name }}>
+                    <input class="ctBox" type="checkbox" data-id={{ city.id }} data-name={{ city.name }}>
 		    {{ city.name }}
 		  </li>
 		  {% endfor %}
